# cobra

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: euler_angle.f90  quaternion.f90
include/data/: quaternion.h  vector.h
include/data_structure/: vector.h
include/maths/: matrix.hpp  quaternion.hpp  utils.hpp  vector.hpp  vector.tpp
include/orientation_kernel/: quaternion.h
src/data/: quaternion.cc  vector.cc
src/maths/: quaternion.cpp
